crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@261.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(3,4)) &> nummultirange(numrange(3.5,6));"
---
SelectStmt@0..70
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..67
    AExpr@7..67
      FuncCall@7..33
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..33
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..31
            Iconst@30..31 "3"
          Ascii44@31..32 ","
          AConst@32..33
            Iconst@32..33 "4"
      Ascii41@33..34 ")"
      Ascii41@34..35 ")"
      Whitespace@35..36 " "
      Op@36..38 "&>"
      Whitespace@38..39 " "
      FuncCall@39..67
        Ident@39..52 "nummultirange"
        Ascii40@52..53 "("
        FuncCall@53..67
          Ident@53..61 "numrange"
          Ascii40@61..62 "("
          AConst@62..65
            Fconst@62..65 "3.5"
          Ascii44@65..66 ","
          AConst@66..67
            Iconst@66..67 "6"
  Ascii41@67..68 ")"
  Ascii41@68..69 ")"
  Ascii59@69..70 ";"

