crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@263.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'empty'::numrange -|- nummultirange(numrange(1,2));"
---
SelectStmt@0..58
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..55
    AExpr@7..55
      TypeCast@7..24
        AConst@7..14
          Sconst@7..14 "'empty'"
        Typecast@14..16 "::"
        TypeName@16..24
          Ident@16..24 "numrange"
      Whitespace@24..25 " "
      Op@25..28 "-|-"
      Whitespace@28..29 " "
      FuncCall@29..55
        Ident@29..42 "nummultirange"
        Ascii40@42..43 "("
        FuncCall@43..55
          Ident@43..51 "numrange"
          Ascii40@51..52 "("
          AConst@52..53
            Iconst@52..53 "1"
          Ascii44@53..54 ","
          AConst@54..55
            Iconst@54..55 "2"
  Ascii41@55..56 ")"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

