crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@264.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange() -|- 'empty'::numrange;"
---
SelectStmt@0..45
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..44
    AExpr@7..44
      FuncCall@7..20
        Ident@7..20 "nummultirange"
      Ascii40@20..21 "("
      Ascii41@21..22 ")"
      Whitespace@22..23 " "
      Op@23..26 "-|-"
      Whitespace@26..27 " "
      TypeCast@27..44
        AConst@27..34
          Sconst@27..34 "'empty'"
        Typecast@34..36 "::"
        TypeName@36..44
          Ident@36..44 "numrange"
  Ascii59@44..45 ";"

