crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@266.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT nummultirange() -|- nummultirange();
---
SelectStmt@0..43
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..40
    AExpr@7..40
      FuncCall@7..20
        Ident@7..20 "nummultirange"
      Ascii40@20..21 "("
      Ascii41@21..22 ")"
      Whitespace@22..23 " "
      Op@23..26 "-|-"
      Whitespace@26..27 " "
      FuncCall@27..40
        Ident@27..40 "nummultirange"
  Ascii40@40..41 "("
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

