crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@268.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange() -|- nummultirange(numrange(1,2));"
---
SelectStmt@0..56
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..53
    AExpr@7..53
      FuncCall@7..20
        Ident@7..20 "nummultirange"
      Ascii40@20..21 "("
      Ascii41@21..22 ")"
      Whitespace@22..23 " "
      Op@23..26 "-|-"
      Whitespace@26..27 " "
      FuncCall@27..53
        Ident@27..40 "nummultirange"
        Ascii40@40..41 "("
        FuncCall@41..53
          Ident@41..49 "numrange"
          Ascii40@49..50 "("
          AConst@50..51
            Iconst@50..51 "1"
          Ascii44@51..52 ","
          AConst@52..53
            Iconst@52..53 "2"
  Ascii41@53..54 ")"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

