crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@269.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT numrange(1,2) -|- nummultirange(numrange(2,4));"
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..51
    AExpr@7..51
      FuncCall@7..19
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..17
          Iconst@16..17 "1"
        Ascii44@17..18 ","
        AConst@18..19
          Iconst@18..19 "2"
      Ascii41@19..20 ")"
      Whitespace@20..21 " "
      Op@21..24 "-|-"
      Whitespace@24..25 " "
      FuncCall@25..51
        Ident@25..38 "nummultirange"
        Ascii40@38..39 "("
        FuncCall@39..51
          Ident@39..47 "numrange"
          Ascii40@47..48 "("
          AConst@48..49
            Iconst@48..49 "2"
          Ascii44@49..50 ","
          AConst@50..51
            Iconst@50..51 "4"
  Ascii41@51..52 ")"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

